--- a/constructor_win/construct.yaml
+++ b/constructor_win/construct.yaml
@@ -5,6 +5,7 @@ channels:
 specs:
   - python==3.12
   - conda
+  - menuinst
 post_install: win_installer.bat
 # tar czf .\win_build.gz -C C:\Users\runner\miniconda3\envs\builder\ conda-bld\*
 extra_files:
