--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,11 +52,11 @@ jobs:
       - name: List Conda Environments
         run: conda info --envs
 
-      # - name: Run Tests with Pytest
-      #   run: |
-      #     conda activate plant-seg-dev
-      #     pytest -s --cov --cov-report=xml
-      #     conda deactivate
+      - name: Run Tests with Pytest
+        run: |
+          conda activate plant-seg-dev
+          pytest -s --cov --cov-report=xml
+          conda deactivate
 
       - name: Bump version
         id: bump
@@ -103,13 +103,10 @@ jobs:
 
   build_installer:
     needs: test-and-build
-    # runs-on: ubuntu-latest
     strategy:
       matrix:
         # os: ["ubuntu", "windows"]
-        # os: ["windows"]
         os: ["ubuntu-latest", "windows-latest", "macos-latest"]
-    # runs-on: self-hosted
     # runs-on: [self-hosted, "${{ matrix.os }}"]
     runs-on: ["${{ matrix.os }}"]
 
@@ -117,10 +114,6 @@ jobs:
       run:
         # Conda requires a login shell in order to work properly
         shell: ${{ matrix.os == 'windows' && 'powershell' || 'bash -el {0}' }}
-
-    # env:
-    #   DISPLAY: ":99.0"
-    # CONDA_OVERRIDE_CUDA: "12.4"
 
     steps:
       - name: Checkout Repository
