--- a/constructor/construct.yaml
+++ b/constructor/construct.yaml
@@ -13,7 +13,8 @@ post_install: unix_installer.sh # [unix]
 extra_files:
   - build.gz: "build.gz"
 license_file: ../LICENSE
-welcome_image: ../docs/logos/logo.png
-icon_image: ../Menu/logo.png
+welcome_image: ../Menu/logo_horizontal.png # [unix]
+welcome_image: ../Menu/logo_vertical.png # [win]
+icon_image: ../Menu/icon.png
 register_python: false
 initialize_conda: true
