--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -157,6 +157,6 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: installer-artifact-{{ matrix.os }}
-          path: constructor/PlantSeg*
+          path: installer/PlantSeg*
           overwrite: true
           if-no-files-found: error
