--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -156,7 +156,7 @@ jobs:
       - name: Upload Installer Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: installer-artifact-{{ matrix.os }}
+          name: "installer-artifact-${{ matrix.os }}"
           path: installer/PlantSeg*
           overwrite: true
           if-no-files-found: error
