--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -96,7 +96,7 @@ jobs:
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: build-artifact
+          name: plantseg-conda-build
           path: constructor/build.gz
           overwrite: true
           if-no-files-found: error
@@ -121,7 +121,7 @@ jobs:
 
       - uses: actions/download-artifact@v4
         with:
-          name: build-artifact
+          name: plantseg-conda-build
           path: ./constructor
       - name: Display downloaded files
         run: ls ./constructor
@@ -156,7 +156,7 @@ jobs:
       - name: Upload Installer Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: "installer-artifact-${{ matrix.os }}"
+          name: "plantseg-installer-${{ matrix.os }}"
           path: installer/PlantSeg*
           overwrite: true
           if-no-files-found: error
