fix: show in the installer the new version

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -118,6 +118,11 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+      - name: Checkout new release
+        run: |
+          git fetch
+          git checkout master
+          cat plantseg/__version__.py
 
       - uses: actions/download-artifact@v4
         with:
