--- a/.github/workflows/conventional-commit.yml
+++ b/.github/workflows/conventional-commit.yml
@@ -18,9 +18,5 @@ jobs:
       # Lint the PR title against Conventional Commits
       - name: Lint PR title
         run: |
-          # dump the PR title into a file
-          echo "${{ github.event.pull_request.title }}" > pr_title.txt
-          # lint that file (I guess there is no way to just feed a string)
-          npx commitlint \
-            --config @commitlint/config-conventional \
-            --edit pr_title.txt
+          echo "${{ github.event.pull_request.title }}" \
+          | npx commitlint --config @commitlint/config-conventional
