--- a/.github/workflows/conventional-commit.yml
+++ b/.github/workflows/conventional-commit.yml
@@ -13,10 +13,11 @@ jobs:
       # Install commitlint and the conventional config
       - name: Install Commitlint
         run: |
-          npm install --no-save @commitlint/{cli,config-conventional}
+          npm install --save-dev @commitlint/config-conventional @commitlint/cli
+          echo "export default {extends: ['@commitlint/config-conventional']};" > commitlint.config.js
 
       # Lint the PR title against Conventional Commits
       - name: Lint PR title
         run: |
           echo "${{ github.event.pull_request.title }}" \
-          | npx commitlint --config @commitlint/config-conventional
+          | npx commitlint --config commitlint.config.js
