--- a/.github/workflows/conventional-commit.yml
+++ b/.github/workflows/conventional-commit.yml
@@ -11,12 +11,14 @@ jobs:
       - uses: actions/checkout@v3
 
       # Install commitlint and the conventional config
+      # Ref: https://github.com/conventional-changelog/commitlint/blob/27dad55a69e7c531e2c57a3b1db7ead40fa3a304/%40commitlint/config-conventional/README.md?plain=1#L11-L12
       - name: Install Commitlint
         run: |
           npm install --save-dev @commitlint/config-conventional @commitlint/cli
           echo "export default {extends: ['@commitlint/config-conventional']};" > commitlint.config.js
 
       # Lint the PR title against Conventional Commits
+      # Ref: https://commitlint.js.org/reference/cli.html
       - name: Lint PR title
         run: |
           echo "${{ github.event.pull_request.title }}" \
