--- a/environment-dev-apple.yaml
+++ b/environment-dev-apple.yaml
@@ -7,6 +7,7 @@ channels:
   # - defaults
 dependencies:
   - python
+  - pip
   # Neural Network and GPU
   - pytorch::pytorch
   - torchvision
@@ -18,17 +19,19 @@ dependencies:
   - python-elf
   - python-graphviz
   - scikit-image
-  - bioimageio.core>=0.6.5,<=0.7.0
-  - xarray<2025.3.0  # 2025.3.0 cause problem plant-seg/issues/396
+  - bioimageio.core>=0.8.0
+  - xarray
   # GUI
+  - qtpy
   - pyqt
   - napari
   # Other
   - requests
   - pyyaml
-  - pydantic>2,<2.10  # 2.10 cause problem spec-bioimage-io/issues/663
+  - pydantic>2
   # Test
   - pytest
+  - pytest-cov
   - pytest-qt
   - pytest-mock
   - requests-mock
