--- a/environment.yaml
+++ b/environment.yaml
@@ -14,8 +14,8 @@ dependencies:
   - python-elf
   - python-graphviz
   - scikit-image
-  - bioimageio.core>=0.6.5,<=0.7.0
-  - xarray<2025.3.0 # 2025.3.0 cause problem plant-seg/issues/396
+  - bioimageio.core>=0.8.0
+  - xarray
   # GUI
   - qtpy
   - pyqt
@@ -23,6 +23,6 @@ dependencies:
   # Other
   - requests
   - pyyaml
-  - pydantic>2,<2.10 # 2.10 cause problem spec-bioimage-io/issues/663
+  - pydantic>2
   - pip:
       - -e .
