--- a/environment-dev.yaml
+++ b/environment-dev.yaml
@@ -17,8 +17,7 @@ dependencies:
   - python-elf
   - python-graphviz
   - scikit-image
-  - bioimageio.core>=0.6.5,<=0.7.0
-  - xarray<2025.3.0 # 2025.3.0 cause problem plant-seg/issues/396
+  - bioimageio.core>=0.8.0
   # GUI
   - qtpy
   - pyqt
@@ -26,7 +25,7 @@ dependencies:
   # Other
   - requests
   - pyyaml
-  - pydantic>2,<2.10 # 2.10 cause problem spec-bioimage-io/issues/663
+  - pydantic>2
   # Test
   - pytest
   - pytest-cov
