feat: new workflow editor (#434)
Open the workflow editor via `plantseg -e` or through the Napari GUI in the I/O tab.

---------

Co-authored-by: KRiedmiller <kai.riedmiller@iwr.uni-heidelberg.de>
Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,13 @@ nd = "nd"       # N-dimensional (ND)
 ome = "ome"     # Open Microscopy Environment (OME)
 datas = "datas" # pyinstaller
 
+[tool.typos.files]
+extend-exclude = [
+  "tests/**",
+  "plantseg/**",
+  "examples/**",
+]
+
 [tool.ruff.lint]
 extend-select = ["I"]
 
