--- a/environment-dev-apple.yaml
+++ b/environment-dev-apple.yaml
@@ -6,11 +6,12 @@ channels:
   # `defaults` of Anaconda is not accessible for many non-profit institutes such as EMBL.
   # - defaults
 dependencies:
-  - python
+  - python>=3.11
   - pip
   # Neural Network and GPU
   - pytorch::pytorch
   - torchvision
+  - tensorboard
   # Bioimage and CV
   - tifffile
   - h5py
@@ -19,12 +20,14 @@ dependencies:
   - python-elf
   - python-graphviz
   - scikit-image
-  - bioimageio.core>=0.8.0
+  - bioimageio.core>=0.9.0
+  - bioimageio.spec>=0.5.4.3
   # GUI
   - qtpy
   - pyqt
   - napari
   # Other
+  - qt-material
   - requests
   - pyyaml
   - pydantic>2
@@ -43,6 +46,7 @@ dependencies:
   - mkdocs-git-revision-date-localized-plugin
   - mkdocs-git-committers-plugin-2
   - mkdocstrings-python
+  - mike
   - pip:
       - markdown-exec
       # PlantSeg
