--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -108,6 +108,8 @@ jobs:
           if-no-files-found: error
 
       - name: Trigger building docs
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: gh workflow run build-and-publish-docs.yml -f {{ steps.bump.outputs.current-version }}
 
   build_installer:
