--- a/.github/workflows/test_trigger.yml
+++ b/.github/workflows/test_trigger.yml
@@ -23,4 +23,6 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Trigger building docs
-        run: gh workflow run build-and-publish-docs.yml -f {{ inputs.version }}
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: gh workflow run build-and-publish-docs.yml -f {{ steps.bump.outputs.current-version }}
