--- a/.github/workflows/test_trigger.yml
+++ b/.github/workflows/test_trigger.yml
@@ -25,4 +25,4 @@ jobs:
       - name: Trigger building docs
         env:
           GH_TOKEN: ${{ github.token }}
-        run: gh workflow run build-and-publish-docs.yml -f {{ steps.bump.outputs.current-version }}
+        run: gh workflow run build-and-publish-docs.yml -f ${{ steps.bump.outputs.current-version }}
