--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -110,7 +110,7 @@ jobs:
       - name: Trigger building docs
         env:
           GH_TOKEN: ${{ github.token }}
-        run: gh workflow run build-and-publish-docs.yml -f ${{ steps.bump.outputs.current-version }}
+        run: gh workflow run build-and-publish-docs.yml -f version=${{ steps.bump.outputs.current-version }}
 
   build_installer:
     needs: test-and-build
